2020-10-02 Stanislas Rolland  <typo32020(arobas)sjbr.ca>
	* Resolves #92322: TYPO3 10.4 Support

2020-06-06 Stanislas Rolland  <typo32020(arobas)sjbr.ca>
	* Resolves #91601: Remove dependency on EXT:rsaauth
	* Resolves #91602: Migrate configuration from EXTCONF to EXTENSIONS
	* Resolves #91603: Add Zurb Foundation default template
	* Resolves #91604: Cleanup composer.json and ext_emconf.php

2018-11-03 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #86942: New subscription fails with exception in getDefaultHashInstance
	* Update version to 6.0.2

2018-11-03 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #86832: Table 'cache_md5params' doesn't exist
	* Update version to 6.0.1

2018-10-28 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #86784: Error during installation when extension filemetadata is not installed

2018-10-24 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #86736: Removing all selectable user groups was not possible
	* Update version to 5.1.1
	* Resolves #86724: Migrate to TYPO3 9 LTS
	* Update version to 6.0.0

2018-10-23 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #85925: PHP codeinspection returns errors
	* Resolves #84694: Backslash missing in user image preview link path
	* Resolves #84569: Misleading frontend output while deleting images in EDIT mode
	* Resolves #86726: usergroup field is required when allowUserGroupSelection is set

2018-04-04 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #84605: PHP Warning: count() in SJBR\SrFeuserRegister\Request\Parameters

2018-04-02 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #84076: Honour TS setup delete = 0
	* Resolves #84077: Language label overrides for select fields not respected in forms
	* Resolves #84087: Required custom radio field not validated correctly

2018-02-09 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #83833: Salutation does not match in registration and response for "Ms" and "Mrs"