@@ -1,3 +1,6 @@
+2020-10-04 Stanislas Rolland  <typo32020(arobas)sjbr.ca>
+	* Resolves #92322: TYPO3 10.4 Mailer Support
+
 2020-10-02 Stanislas Rolland  <typo32020(arobas)sjbr.ca>
 	* Resolves #92322: TYPO3 10.4 Support
 
